Fix for #62 #63. No longer calculating left justification, using table to align content into cells.

--- a/css/core.css
+++ b/css/core.css
@@ -99,6 +99,18 @@ div.popup-option-checbox input{
     margin-right: 15px;
 }
 
+table.popup-option-list {
+    margin: auto;
+}
+
+table.popup-option-list tr {
+    padding: 5px;
+}
+
+table.popup-option-list tr td {
+    padding: 5px;
+}
+
 button#popup-proceed {
     bottom: 10px;
     right: 10px;
